--- a/src/app/travellers/admin/admin.component.html
+++ b/src/app/travellers/admin/admin.component.html
@@ -70,7 +70,7 @@
 <h2>Update</h2>
         <div class="form-row">
             <div class="form-group  col-md-8">
-              <input type = "text"  class="form-control" name="Id" [(ngModel)]="Id" placeholder="User Id" >
+              <input type = "text"  class="form-control" name="Id" [(ngModel)]="Id" placeholder="User Id" readonly>
            
             </div>
           </div>
@@ -117,13 +117,13 @@
             </div>
             <div class="form-row">
                 <div class="form-group  col-md-8">
-                  <input type = "text"  class="form-control" name="Password Hash" [(ngModel)]="PasswordHash" placeholder="Password Hash" >
+                  <input type = "text"  class="form-control" name="Password Hash" [(ngModel)]="PasswordHash" placeholder="Password Hash" readonly>
                
                 </div>
               </div>
               <div class="form-row">
                 <div class="form-group  col-md-8">
-                  <input type = "text"  class="form-control" name="Security Stamp" [(ngModel)]="SecurityStamp"  placeholder="Security Stamp" >
+                  <input type = "text"  class="form-control" name="Security Stamp" [(ngModel)]="SecurityStamp"  placeholder="Security Stamp" readonly>
                 
                 </div>
               </div>
