update home page & car & hotel page under maintenance

--- a/src/app/travellers/home/payment/payment.component.html
+++ b/src/app/travellers/home/payment/payment.component.html
@@ -119,7 +119,7 @@
 
                     <div class="form-row">
                         <div class="form-group  col-md-8">
-                            <input id="Id" type = "text" class="form-control"  name="Id"  [(ngModel)]="userId[0].Id" placeholder="User Id" readonly required>
+                            <input id="Id" type = "hidden" class="form-control"  name="Id"  [(ngModel)]="userId[0].Id" placeholder="User Id" readonly required>
                             
                           </div>
                         </div>
