--- a/src/app/travellers/home/traveller-info/traveller-info.component.html
+++ b/src/app/travellers/home/traveller-info/traveller-info.component.html
@@ -8,7 +8,7 @@
  <hr class="separator">
 <div class="form-row">
   
- <div class="col-md-4">
+ <div class="col-md-5">
     <thead>
         <tr>
 
@@ -26,7 +26,7 @@
     </table>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-md-5">
       <thead>
           <tr>
   
@@ -44,7 +44,7 @@
       </table>
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-2">
         <thead>
             <tr>
     
@@ -143,7 +143,7 @@
 
          <div class="form-row">
           <div class="form-group  col-md-8">
-              <input id="Id" type = "text" class="form-control"  name="Id"  [(ngModel)]="IdTrav" placeholder="User Id" readonly required>
+              <input  id="Id" type = "hidden" class="form-control"  name="Id"  [(ngModel)]="IdTrav" placeholder="User Id" readonly required>
               
             </div>
           </div>
@@ -230,7 +230,7 @@
         
         <div class="form-row">
             <div class="form-group  col-md-8">
-                <input id="Id" type = "text" class="form-control"  name="Id"  [(ngModel)]="IdCntct" placeholder="User Id" readonly required>
+                <input id="Id" type = "hidden" class="form-control"  name="Id"  [(ngModel)]="IdCntct" placeholder="User Id" readonly required>
                 
               </div>
             </div>
