--- a/src/app/travellers/travellers.component.html
+++ b/src/app/travellers/travellers.component.html
@@ -25,7 +25,9 @@
   <li class="nav-item" > 
     <a class="nav-link" style="color:gray"  href="travellers/admin">Admin Panel</a>
   </li>
-  <li class="nav-item dropdown "  >
+
+<div style="float: right">
+  <li class="nav-item dropdown"  >
     <a class="nav-link dropdown-toggle" data-toggle="dropdown"style="color:gray"  href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="far fa-user"></i>Account</a>
   
     <div class="dropdown-menu" *ngIf="login==true" >
@@ -42,7 +44,7 @@
       <a class="dropdown-item" routerLink='travellers/home'(click)="onClear()">Sign out</a>
     </div>
 
-  </li>
+  </li></div>
 </ul>
 
 
